--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -27,7 +27,7 @@
     align-items: center;
     margin-bottom: 15px;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 26px;
 }
@@ -60,6 +60,14 @@
     border: 1px solid #D81159;
 }
 
+.second-title-line{
+    margin: 0;
+    width: 100%;
+    border: 1px solid #d3d3d3;
+    margin-bottom: 30px;
+}
+
+
 .content-container {
     margin-top: 60px;
     margin-left: 120px;
@@ -67,4 +75,8 @@
     border-top-right-radius: 30px;
     height: 81vh;
     background-color: white;
+}
+th {
+    color:  #3066BE;
+    font-size: 12px;
 }
