--- a/frontend/src/pages/historic/Historic.css
+++ b/frontend/src/pages/historic/Historic.css
@@ -1,20 +1,60 @@
-th {
-    color:  #3066BE;
-    font-size: 12px;
+p {
+    margin: 0;
 }
 
-.details-button {
-    color: black;
+.padd-dash {
+    padding: 20px 30px;
 }
-.details-button:hover {
+
+.p-text-title {
+    font-weight: 600;
     color: #3066BE;
-    text-decoration:none; 
-}
-.details-titles {
-    color:  #3066BE;
     font-size: 14px;
 }
-.details {
-    color: black;
+
+.p-text-value {
+    font-weight: 600;
+    color: #000000;
     font-size: 14px;
+}
+
+.flex-line {
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.mrg-link {
+    margin-right: 20px;
+}
+
+.user-details {
+    padding: 15px 0 5px;
+}
+
+.access-card {
+    border-bottom: 1px solid #cccccc;
+    padding-bottom: 6px;
+}
+
+.access-card .p-text-title {
+    margin-right: 6px;
+}
+
+.user-card-list {
+    list-style: none;
+    padding: 0;
+}
+
+.user-card-list .card-item {
+    margin-bottom: 15px;
+}
+
+.user-card-list .card-item:last-child {
+    margin-bottom: 0;
+}
+
+.options-card {
+    border-top: 1px solid #cccccc;
+    padding-top: 6px;
 }
