--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -48,7 +48,7 @@
 .title-page {
     margin-top: 62px;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 700;
     margin-left: 39px;
 }
@@ -84,8 +84,13 @@
 
 th {
     color:  #3066BE;
-    font-size: 12px;
+    font-size: 15px;
+    font-weight: 700;
+}
+td {
     font-weight: 600;
+    color: #000000;
+    font-size: 15px;
 }
 
 .link-option, .link-option-del {
@@ -103,4 +108,64 @@ th {
 
 .link-option-del:hover {
     color: #D81159;
+}
+
+
+/* revisar */
+
+.padd-dash {
+    padding: 20px 30px;
+}
+
+.p-text-title {
+    font-weight: 600;
+    color: #3066BE;
+    font-size: 14px;
+}
+
+.p-text-value {
+    font-weight: 600;
+    color: #000000;
+    font-size: 14px;
+}
+
+.flex-line {
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.mrg-link {
+    margin-right: 20px;
+}
+
+.user-details {
+    padding: 15px 0 5px;
+}
+
+.access-card {
+    border-bottom: 1px solid #cccccc;
+    padding-bottom: 6px;
+}
+
+.access-card .p-text-title {
+    margin-right: 6px;
+}
+
+.user-card-list {
+    list-style: none;
+    padding: 0;
+}
+
+.user-card-list .card-item {
+    margin-bottom: 15px;
+}
+
+.user-card-list .card-item:last-child {
+    margin-bottom: 0;
+}
+
+.options-card {
+    border-top: 1px solid #cccccc;
+    padding-top: 6px;
 }
