--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -74,5 +74,5 @@
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     background-color: white;
-    
+    min-height: 785px;
 }
