--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -122,13 +122,13 @@ td {
 /* revisar */
 
 .padd-dash {
-    padding: 20px 30px;
+    padding: 20px 20px;
 }
 
 .p-text-title {
-    font-weight: 600;
+    font-weight: 700;
     color: #3066BE;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .p-text-value {
@@ -179,11 +179,15 @@ td {
 }
 
 .card-create-padding {
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
 .button-centralizer {
     display: flex;
     justify-content: center;
     margin-top: 30px;
+}
+
+.forms-disp {
+    display: block !important;
 }
