--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -196,3 +196,54 @@ td {
     margin: 30px 30px 10px 0;
     
 }
+
+.form-group-user {
+    margin-top: 30px;
+    display: block !important;
+    font-size: 16px;
+    font-weight: 700;
+    color: #3066BE;
+    
+}
+
+.form-group-user input {
+    border-radius: 6px;
+    box-shadow: none;
+    border: 1px solid black;
+}
+
+.form-group-create {
+    
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cad-user-btn {
+    margin-top: 80px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    color: #3066BE;
+    background-color: white;
+    border: 1px solid #3066BE;
+    border-radius: 4px;
+    padding: 7px 49px;
+    background: white;
+    margin-bottom: 50px;
+    outline: none;
+    
+    justify-content: center;
+}
+
+.group-btn {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.group-btn button a {
+    outline: none;
+    text-decoration: none;
+    color: #3066BE;
+}
