--- a/frontend/src/pages/login/login.css
+++ b/frontend/src/pages/login/login.css
@@ -48,7 +48,6 @@
     border-radius: 4px;
     padding: 7px 49px;
     background: white;
-    margin-bottom: 50px;
     outline: none;
 }
 
@@ -71,4 +70,15 @@
     color: #FF0000;
     margin-left: 45px;
     font-size: 14px;
+}
+
+.new-user {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.new-user a {
+    text-decoration: none;
+    
 }
