--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -126,9 +126,10 @@ td {
 }
 
 .p-text-title {
-    font-weight: 700;
     color: #3066BE;
     font-size: 16px;
+    margin-right: 5px;
+    font-weight: 700 !important;
 }
 
 .p-text-value {
@@ -190,6 +191,7 @@ td {
 
 .forms-disp {
     display: block !important;
+    margin-bottom: 15px;
 }
 
 .new-user-button {
@@ -246,4 +248,27 @@ td {
     outline: none;
     text-decoration: none;
     color: #3066BE;
+}
+
+.new-card-action {
+    background-color: white;
+    border: none;
+    padding: 5px 15px;
+    text-decoration: none;
+}
+
+.new-card-action a {
+    text-transform: none;
+}
+
+.new-card-action a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.new-card-action:hover {
+    background-color: #3066BE;
+    color: white;
+    border-radius: 4px;
+    text-decoration: none;
 }
