--- a/frontend/src/components/Card/card.css
+++ b/frontend/src/components/Card/card.css
@@ -1,7 +1,8 @@
 .card-container {
     background-color: white;
     border-radius: 30px;
-    padding: 20px
+    padding: 20px;
+    margin-bottom: 35px;
 }
 
 .card-bold {
